# TickerFlow

./: .dockerignore  .gitignore  Commands.md  Dockerfile  README.md  docker-compose.yml  flink.Dockerfile  pyproject.toml
scripts/: clear_old_redis_data.py  test_alpaca_api.py
src/backend/: AlpacaUtils.py  alpaca_utils.py  tickerflow.py
src/backend/api/: main.py
src/backend/flink/: highest_price.py  redis.py  redis_sink.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: index.css
src/frontend/src/components/: Dashboard.jsx  StatsCard.jsx  StockChart.jsx  StockSelector.jsx
src/frontend/src/utils/: mockData.js
