[project]
name = "tickerflow"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Woldegiorgies",email = "45132231+Samuel-T-W@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "alpaca-py (>=0.42.2,<0.43.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "kafka-python (>=2.2.15,<3.0.0)",
    "apache-flink (>=2.1.1,<3.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "fastapi (>=0.109.0,<0.110.0)",
    "uvicorn (>=0.27.0,<0.28.0)"
]

[tool.poetry]
packages = [{include = "tickerflow", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
